Practica_1/ForSwitch/ForSwitchParser.py
# Generated from ForSwitch.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ForSwitchParser ( Parser ):

    grammarFileName = "ForSwitch.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'switch'", "'else'", "'for'", 
                     "'case'", "'default'", "':'", "'('", "')'", "'{'", 
                     "'}'", "'='", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", 
                     "'=='", "'!='", "';'" ]

    symbolicNames = [ "<INVALID>", "IF", "SWITCH", "ELSE", "FOR", "CASE", 
                      "DEFAULT", "COLON", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", 
                      "GT", "LT", "EQ", "NEQ", "SEMI", "ID", "INT", "WS" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_ifElseStmt = 2
    RULE_switchStmt = 3
    RULE_caseBlock = 4
    RULE_defaultBlock = 5
    RULE_condicion = 6
    RULE_asignacion = 7
    RULE_forStmt = 8
    RULE_expresion = 9

    ruleNames =  [ "programa", "sentencia", "ifElseStmt", "switchStmt", 
                   "caseBlock", "defaultBlock", "condicion", "asignacion", 
                   "forStmt", "expresion" ]

    EOF = Token.EOF
    IF=1
    SWITCH=2
    ELSE=3
    FOR=4
    CASE=5
    DEFAULT=6
    COLON=7
    LPAREN=8
    RPAREN=9
    LBRACE=10
    RBRACE=11
    ASSIGN=12
    PLUS=13
    MINUS=14
    MUL=15
    DIV=16
    GT=17
    LT=18
    EQ=19
    NEQ=20
    SEMI=21
    ID=22
    INT=23
    WS=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ForSwitchParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ForSwitchParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(ForSwitchParser.SentenciaContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(ForSwitchParser.SEMI)
            else:
                return self.getToken(ForSwitchParser.SEMI, i)

        def getRuleIndex(self):
            return ForSwitchParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = ForSwitchParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.sentencia()
                self.state = 22
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 21
                    self.match(ForSwitchParser.SEMI)


                self.state = 26 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4194326) != 0)):
                    break

            self.state = 28
            self.match(ForSwitchParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifElseStmt(self):
            return self.getTypedRuleContext(ForSwitchParser.IfElseStmtContext,0)


        def switchStmt(self):
            return self.getTypedRuleContext(ForSwitchParser.SwitchStmtContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(ForSwitchParser.AsignacionContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(ForSwitchParser.ForStmtContext,0)


        def getRuleIndex(self):
            return ForSwitchParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)




    def sentencia(self):

        localctx = ForSwitchParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 34
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.ifElseStmt()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.switchStmt()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 3)
                self.state = 32
                self.asignacion()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 33
                self.forStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfElseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ForSwitchParser.RULE_ifElseStmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfElseContext(IfElseStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ForSwitchParser.IfElseStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(ForSwitchParser.IF, 0)
        def LPAREN(self):
            return self.getToken(ForSwitchParser.LPAREN, 0)
        def condicion(self):
            return self.getTypedRuleContext(ForSwitchParser.CondicionContext,0)

        def RPAREN(self):
            return self.getToken(ForSwitchParser.RPAREN, 0)
        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(ForSwitchParser.LBRACE)
            else:
                return self.getToken(ForSwitchParser.LBRACE, i)
        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(ForSwitchParser.RBRACE)
            else:
                return self.getToken(ForSwitchParser.RBRACE, i)
        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ForSwitchParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(ForSwitchParser.SentenciaContext,i)

        def ELSE(self):
            return self.getToken(ForSwitchParser.ELSE, 0)
        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(ForSwitchParser.SEMI)
            else:
                return self.getToken(ForSwitchParser.SEMI, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElse" ):
                listener.enterIfElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElse" ):
                listener.exitIfElse(self)



    def ifElseStmt(self):

        localctx = ForSwitchParser.IfElseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ifElseStmt)
        self._la = 0 # Token type
        try:
            localctx = ForSwitchParser.IfElseContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(ForSwitchParser.IF)
            self.state = 37
            self.match(ForSwitchParser.LPAREN)
            self.state = 38
            self.condicion()
            self.state = 39
            self.match(ForSwitchParser.RPAREN)
            self.state = 40
            self.match(ForSwitchParser.LBRACE)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4194326) != 0):
                self.state = 41
                self.sentencia()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 42
                    self.match(ForSwitchParser.SEMI)


                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(ForSwitchParser.RBRACE)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 51
                self.match(ForSwitchParser.ELSE)
                self.state = 52
                self.match(ForSwitchParser.LBRACE)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4194326) != 0):
                    self.state = 53
                    self.sentencia()
                    self.state = 55
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==21:
                        self.state = 54
                        self.match(ForSwitchParser.SEMI)


                    self.state = 61
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 62
                self.match(ForSwitchParser.RBRACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SWITCH(self):
            return self.getToken(ForSwitchParser.SWITCH, 0)

        def LPAREN(self):
            return self.getToken(ForSwitchParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(ForSwitchParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(ForSwitchParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(ForSwitchParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ForSwitchParser.RBRACE, 0)

        def caseBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ForSwitchParser.CaseBlockContext)
            else:
                return self.getTypedRuleContext(ForSwitchParser.CaseBlockContext,i)


        def defaultBlock(self):
            return self.getTypedRuleContext(ForSwitchParser.DefaultBlockContext,0)


        def getRuleIndex(self):
            return ForSwitchParser.RULE_switchStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchStmt" ):
                listener.enterSwitchStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchStmt" ):
                listener.exitSwitchStmt(self)




    def switchStmt(self):

        localctx = ForSwitchParser.SwitchStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_switchStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(ForSwitchParser.SWITCH)
            self.state = 66
            self.match(ForSwitchParser.LPAREN)
            self.state = 67
            self.expresion(0)
            self.state = 68
            self.match(ForSwitchParser.RPAREN)
            self.state = 69
            self.match(ForSwitchParser.LBRACE)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 70
                self.caseBlock()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 76
                self.defaultBlock()


            self.state = 79
            self.match(ForSwitchParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CaseBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CASE(self):
            return self.getToken(ForSwitchParser.CASE, 0)

        def INT(self):
            return self.getToken(ForSwitchParser.INT, 0)

        def COLON(self):
            return self.getToken(ForSwitchParser.COLON, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ForSwitchParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(ForSwitchParser.SentenciaContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(ForSwitchParser.SEMI)
            else:
                return self.getToken(ForSwitchParser.SEMI, i)

        def getRuleIndex(self):
            return ForSwitchParser.RULE_caseBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCaseBlock" ):
                listener.enterCaseBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCaseBlock" ):
                listener.exitCaseBlock(self)




    def caseBlock(self):

        localctx = ForSwitchParser.CaseBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_caseBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(ForSwitchParser.CASE)
            self.state = 82
            self.match(ForSwitchParser.INT)
            self.state = 83
            self.match(ForSwitchParser.COLON)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4194326) != 0):
                self.state = 84
                self.sentencia()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 85
                    self.match(ForSwitchParser.SEMI)


                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefaultBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFAULT(self):
            return self.getToken(ForSwitchParser.DEFAULT, 0)

        def COLON(self):
            return self.getToken(ForSwitchParser.COLON, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ForSwitchParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(ForSwitchParser.SentenciaContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(ForSwitchParser.SEMI)
            else:
                return self.getToken(ForSwitchParser.SEMI, i)

        def getRuleIndex(self):
            return ForSwitchParser.RULE_defaultBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefaultBlock" ):
                listener.enterDefaultBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefaultBlock" ):
                listener.exitDefaultBlock(self)




    def defaultBlock(self):

        localctx = ForSwitchParser.DefaultBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_defaultBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ForSwitchParser.DEFAULT)
            self.state = 94
            self.match(ForSwitchParser.COLON)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4194326) != 0):
                self.state = 95
                self.sentencia()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 96
                    self.match(ForSwitchParser.SEMI)


                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ForSwitchParser.RULE_condicion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CondicionSimpleContext(CondicionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ForSwitchParser.CondicionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ForSwitchParser.ID, 0)
        def INT(self):
            return self.getToken(ForSwitchParser.INT, 0)
        def GT(self):
            return self.getToken(ForSwitchParser.GT, 0)
        def LT(self):
            return self.getToken(ForSwitchParser.LT, 0)
        def EQ(self):
            return self.getToken(ForSwitchParser.EQ, 0)
        def NEQ(self):
            return self.getToken(ForSwitchParser.NEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicionSimple" ):
                listener.enterCondicionSimple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicionSimple" ):
                listener.exitCondicionSimple(self)



    def condicion(self):

        localctx = ForSwitchParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condicion)
        self._la = 0 # Token type
        try:
            localctx = ForSwitchParser.CondicionSimpleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(ForSwitchParser.ID)
            self.state = 105
            localctx.op = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1966080) != 0)):
                localctx.op = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 106
            self.match(ForSwitchParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ForSwitchParser.RULE_asignacion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignContext(AsignacionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ForSwitchParser.AsignacionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ForSwitchParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(ForSwitchParser.ASSIGN, 0)
        def expresion(self):
            return self.getTypedRuleContext(ForSwitchParser.ExpresionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)



    def asignacion(self):

        localctx = ForSwitchParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_asignacion)
        try:
            localctx = ForSwitchParser.AssignContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(ForSwitchParser.ID)
            self.state = 109
            self.match(ForSwitchParser.ASSIGN)
            self.state = 110
            self.expresion(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(ForSwitchParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(ForSwitchParser.LPAREN, 0)

        def asignacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ForSwitchParser.AsignacionContext)
            else:
                return self.getTypedRuleContext(ForSwitchParser.AsignacionContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(ForSwitchParser.SEMI)
            else:
                return self.getToken(ForSwitchParser.SEMI, i)

        def condicion(self):
            return self.getTypedRuleContext(ForSwitchParser.CondicionContext,0)


        def RPAREN(self):
            return self.getToken(ForSwitchParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(ForSwitchParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ForSwitchParser.RBRACE, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ForSwitchParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(ForSwitchParser.SentenciaContext,i)


        def getRuleIndex(self):
            return ForSwitchParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)




    def forStmt(self):

        localctx = ForSwitchParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(ForSwitchParser.FOR)
            self.state = 113
            self.match(ForSwitchParser.LPAREN)
            self.state = 114
            self.asignacion()
            self.state = 115
            self.match(ForSwitchParser.SEMI)
            self.state = 116
            self.condicion()
            self.state = 117
            self.match(ForSwitchParser.SEMI)
            self.state = 118
            self.asignacion()
            self.state = 119
            self.match(ForSwitchParser.RPAREN)
            self.state = 120
            self.match(ForSwitchParser.LBRACE)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4194326) != 0):
                self.state = 121
                self.sentencia()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 122
                    self.match(ForSwitchParser.SEMI)


                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(ForSwitchParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ForSwitchParser.RULE_expresion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class VariableContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ForSwitchParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ForSwitchParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)


    class MulDivContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ForSwitchParser.ExpresionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ForSwitchParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(ForSwitchParser.ExpresionContext,i)

        def MUL(self):
            return self.getToken(ForSwitchParser.MUL, 0)
        def DIV(self):
            return self.getToken(ForSwitchParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDiv" ):
                listener.enterMulDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDiv" ):
                listener.exitMulDiv(self)


    class AddSubContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ForSwitchParser.ExpresionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ForSwitchParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(ForSwitchParser.ExpresionContext,i)

        def PLUS(self):
            return self.getToken(ForSwitchParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(ForSwitchParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSub" ):
                listener.enterAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSub" ):
                listener.exitAddSub(self)


    class ParensContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ForSwitchParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(ForSwitchParser.LPAREN, 0)
        def expresion(self):
            return self.getTypedRuleContext(ForSwitchParser.ExpresionContext,0)

        def RPAREN(self):
            return self.getToken(ForSwitchParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)


    class IntContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ForSwitchParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(ForSwitchParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)



    def expresion(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ForSwitchParser.ExpresionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expresion, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                localctx = ForSwitchParser.IntContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 133
                self.match(ForSwitchParser.INT)
                pass
            elif token in [22]:
                localctx = ForSwitchParser.VariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 134
                self.match(ForSwitchParser.ID)
                pass
            elif token in [8]:
                localctx = ForSwitchParser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 135
                self.match(ForSwitchParser.LPAREN)
                self.state = 136
                self.expresion(0)
                self.state = 137
                self.match(ForSwitchParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 149
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 147
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                    if la_ == 1:
                        localctx = ForSwitchParser.MulDivContext(self, ForSwitchParser.ExpresionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expresion)
                        self.state = 141
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 142
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==15 or _la==16):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 143
                        self.expresion(6)
                        pass
